# netmanageit_connector

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  indicators_count.json  main.py  pyproject.toml  test_comprehensive_fields.py  test_netmanageit_connector.py  test_real_data_integration.py
.github/workflows/: docker-publish.yaml
scripts/: count.py  get_all_observables.py  get_indecators_with_details.sh  get_observable_with_details.sh
src/external_import_connector/: connector.py
src/utils/: config_variables.py  github_client.py  opencti_netmanageit_client.py  opencti_stix_converter.py  stix_client.py
